Minor auto-refactor code cleanup on a massive scale